--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ test:
     - pip
   commands:
     - pip check
-    - julia -e 'using Pkg; Pkg.add("PyCall"); Pkg.build("PyCall")'
+    - julia -e 'ENV["JULIA_PKG_SERVER"] = ""; import Pkg; Pkg.update()'
     - python -c 'import julia; julia.install(); from julia.core import Julia; Julia(compiled_modules=False); from julia import Main'
 
 about:
